Scopeless matching of :host rules for style sharing.

The kSharingRules mode for selector matching needs to bypass scope
checking in various places because we match selectors from the set of
global uncommon attribute rules for which the source scope is unknown.

We should really store these rules per scope, at least for Shadow DOM
v1, and pass the correct scope for matching.

BUG=711539

Review-Url: https://codereview.chromium.org/2824853004
Cr-Commit-Position: refs/heads/master@{#465980}

Former-commit-id: 0e2caa4b6dc7715e9d08e77f46e1dcdf28825405