third_party/WebKit/Source/core/css/SelectorChecker.cpp
@@ -311,6 +311,15 @@ SelectorChecker::MatchStatus SelectorChecker::MatchForRelation(
                                      relation != CSSSelector::kChild)))
     next_context.visited_match_type = kVisitedMatchDisabled;
 
+  // The ParentElement() method will walk up to the host element for :host() and
+  // :host-context() rules in the same scope as the element we are matching.
+  // For kSharingRules, we don't know which scope the rules came from, so we are
+  // using nullptr as scope. This is a workaround to make ParentElement() walk
+  // up to the host when matching :host rules by assuming the scope of the :host
+  // rule is the same as the element we are matching rules for.
+  if (mode_ == kSharingRules && next_context.selector->IsHostPseudoClass())
+    next_context.scope = next_context.element->ContainingShadowRoot();
+
   next_context.in_rightmost_compound = false;
   next_context.is_sub_selector = false;
   next_context.previous_element = context.element;
@@ -332,7 +341,8 @@ SelectorChecker::MatchStatus SelectorChecker::MatchForRelation(
         return MatchForPseudoShadow(
             next_context, context.element->ContainingShadowRoot(), result);
 
-      for (next_context.element = ParentElement(context); next_context.element;
+      for (next_context.element = ParentElement(next_context);
+           next_context.element;
            next_context.element = ParentElement(next_context)) {
         MatchStatus match = MatchSelector(next_context, result);
         if (match == kSelectorMatches || match == kSelectorFailsCompletely)
@@ -349,7 +359,7 @@ SelectorChecker::MatchStatus SelectorChecker::MatchForRelation(
         return MatchForPseudoShadow(next_context, context.element->parentNode(),
                                     result);
 
-      next_context.element = ParentElement(context);
+      next_context.element = ParentElement(next_context);
       if (!next_context.element)
         return kSelectorFailsCompletely;
       return MatchSelector(next_context, result);
